Initial split into PyPI and conda-specific files

--- a/build_utils/pypi_release_tox.ini
+++ b/build_utils/pypi_release_tox.ini
@@ -2,7 +2,7 @@
 # Use conda to set up the python environments to run in
 requires = tox>=4
 # The python environments to run the tests in
-envlist = pypi-py310-min,conda-py310-old-np,{pypi,conda}-{py310,py311,py312},pypisource-{py310,py312}
+envlist = py310-min,py310,py311,py312,source-{py310,py312}
 skip_install = True
 
 [testenv]
@@ -16,7 +16,7 @@ passenv =
 extras_str = [test,matplotlib,phonopy-reader,brille]
 
 # Test PyPI source distribution
-[testenv:pypisource-{py310,py312}]
+[testenv:source-{py310,py312}]
 passenv =
     CC
     CC_LD
@@ -29,7 +29,7 @@ commands_pre =
     --no-binary 'euphonic'
 commands = {[testenv]test_command}
 
-[testenv:pypi-{py310,py311,py312}]
+[testenv:{py310,py311,py312}]
 commands_pre =
     python -m pip install \
     --force-reinstall \
@@ -37,7 +37,7 @@ commands_pre =
     --only-binary 'euphonic'
 commands = {[testenv]test_command}
 
-[testenv:pypi-py310-min]
+[testenv:py310-min]
 platform = (linux)|(win32)
 deps =
     numpy==1.24
@@ -49,37 +49,3 @@ commands_pre =
     euphonic{[testenv]extras_str}=={env:EUPHONIC_VERSION} \
     --only-binary 'euphonic'
 commands = {[testenv]test_command}
-
-[testenv:conda-{py310,py311,py312}]
-whitelist_externals = conda
-install_command = conda install {packages}
-conda_channels =
-    conda-forge
-    default
-extras =
-    test
-    matplotlib
-    phonopy-reader
-
-commands_pre =
-    conda install -c conda-forge euphonic={env:EUPHONIC_VERSION}
-# Brille not available on conda
-commands = {[testenv]test_command} -m "not brille"
-
-# Test against a version of Numpy less than the latest for Conda
-# See https://github.com/conda-forge/euphonic-feedstock/pull/20
-[testenv:conda-py310-old-np]
-whitelist_externals = conda
-install_command = conda install {packages}
-conda_channels =
-    conda-forge
-    default
-deps = numpy==1.24
-extras =
-    test
-    matplotlib
-    phonopy-reader
-commands_pre =
-    conda install -c conda-forge euphonic={env:EUPHONIC_VERSION}
-# Brille not available on conda
-commands = {[testenv]test_command} -m "not brille"
