--- a/.github/workflows/test_release_pypi.yml
+++ b/.github/workflows/test_release_pypi.yml
@@ -1,5 +1,11 @@
 name: Test PyPI release
 on:
+  workflow_call:
+    inputs:
+      version:
+        description: 'The Euphonic release version to test e.g. 0.6.1'
+        required: true
+
   workflow_dispatch:
     inputs:
       version:
