--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -6,6 +6,7 @@ on:
       version:
         description: 'The Euphonic release version to test e.g. 0.6.1'
         required: true
+        type: string
 
 jobs:
   pypi:
