--- a/.github/workflows/test_release_conda.yml
+++ b/.github/workflows/test_release_conda.yml
@@ -5,6 +5,7 @@ on:
       version:
         description: 'The Euphonic release version to test e.g. 0.6.1'
         required: true
+        type: string
 
   workflow_dispatch:
     inputs:
