--- a/.github/workflows/test_release_conda.yml
+++ b/.github/workflows/test_release_conda.yml
@@ -36,17 +36,10 @@ jobs:
         shell: bash -el {0}
         env:
           EUPHONIC_VERSION: ${{ inputs.version }}
-          EXTRA_PACKAGES: matplotlib-base pyyaml h5py
-          TESTING_PACKAGES: pytest=7.* coverage pytest-mock pytest-lazy-fixture pytest-xvfb python-slugify
 
         run: |
-          conda install -c conda-forge euphonic=$EUPHONIC_VERSION $EXTRA_PACKAGES $TESTING_PACKAGES
-
-      # - name: Update pip and install testing dependencies
-      #   shell: bash -l {0}
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     python -m pip install -r tests_and_analysis/ci_requirements.txt
+          conda env update --file build_utils/conda_release_test_requirements.yml
+          conda install -c conda-forge euphonic=$EUPHONIC_VERSION
 
       - name: Run tests
         shell: bash -el {0}
