--- a/tox.ini
+++ b/tox.ini
@@ -74,9 +74,15 @@ extras =
 commands = {[testenv]test_command} -m "not c_extension"
 
 [testenv:py310-minrequirements-{linux,mac}]
+platform =
+    linux: linux
+    mac: darwin
 set_env =
     linux: PIP_CONSTRAINT={toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
     mac: PIP_CONSTRAINT={toxinidir}/tests_and_analysis/minimum_euphonic_requirements_mac.txt
+deps =
+    numpy==1.24
+    setuptools==60.*
 extras =
     {[testenv]extras}
     matplotlib
