Parser didn't like an if: starting with !, odd?

--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -25,7 +25,7 @@ on:
 
 jobs:
   test:
-    if: ! inputs.skip
+    if: ${{ ! inputs.skip }}
     runs-on: ${{ inputs.os }}
     env:
       MIN_MAX_PYTHON_VERSIONS: |
