--- a/.github/workflows/test_release_conda.yml
+++ b/.github/workflows/test_release_conda.yml
@@ -49,7 +49,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: Unit test results ${{ matrix.os }} ${{ matrix.python-version }}
+          name: Conda-forge unit test results ${{ matrix.os }} ${{ matrix.python-version }}
           path: tests_and_analysis/test/reports/junit_report*.xml
 
   publish-test-results:
@@ -65,3 +65,4 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
           junit_files: artifacts/**/junit_report*.xml
+          check_name: PyPI test results
