Correct name of ref environment

--- a/build_utils/pypi_release_tox.ini
+++ b/build_utils/pypi_release_tox.ini
@@ -23,10 +23,10 @@ passenv =
     CC_LD
     LDFLAGS
     CPPFLAGS
-commands_pre = {[pypi]inst_str} --no-binary "euphonic"
+commands_pre = {[testenv]inst_str} --no-binary 'euphonic'
 
 [testenv:{py310,py311,py312}]
-commands_pre = {[pypi]inst_str} --only-binary 'euphonic'
+commands_pre = {[testenv]inst_str} --only-binary 'euphonic'
 
 [testenv:py310-min]
 platform = (linux)|(win32)
@@ -35,4 +35,4 @@ set_env =
 deps =
     numpy==1.24
     setuptools==60.*
-commands_pre = {[pypi]inst_str} --only-binary 'euphonic'
+commands_pre = {[testenv]inst_str} --only-binary 'euphonic'
