--- a/build_utils/pypi_release_tox.ini
+++ b/build_utils/pypi_release_tox.ini
@@ -30,9 +30,7 @@ commands_pre = {[testenv]inst_str} --only-binary 'euphonic'
 
 [testenv:py310-min]
 platform = (linux)|(win32)
-set_env =
-    PIP_CONSTRAINT={toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
 deps =
     numpy==1.24
     setuptools==60.*
-commands_pre = {[testenv]inst_str} --only-binary 'euphonic'
+commands_pre = {[testenv]inst_str} -c {toxinidir}/../tests_and_analysis/minimum_euphonic_requirements.txt --only-binary 'euphonic'
