--- a/tox.ini
+++ b/tox.ini
@@ -61,7 +61,7 @@ extras =
     phonopy-reader
     brille
 commands =
-    {[testenv]test_command} --cov -m multiple_extras
+    {[testenv]test_command} --cov -m "multiple_extras"
 
 [testenv:py310-no-c]
 install_command = {[testenv]install_command} -Csetup-args="-Dpython_only=true"
@@ -71,42 +71,21 @@ extras =
     matplotlib
     phonopy-reader
     brille
-commands = {[testenv]test_command} -m 'not c_extension'
+commands = {[testenv]test_command} -m "not c_extension"
 
-[testenv:py310-minrequirements-linux]
-skip_install = True
-allowlist_externals = rm
-install_command =
-    python -m pip install --force-reinstall {opts} {packages}
-platform = linux
+[testenv:py310-minrequirements-{linux,mac}]
+platform =
+    linux: linux
+    mac: darwin
+set_env =
+    linux: PIP_CONSTRAINT={toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+    mac: PIP_CONSTRAINT={toxinidir}/tests_and_analysis/minimum_euphonic_requirements_mac.txt
 deps =
-    numpy==1.24.0
-    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
-commands_pre =
-    python -m pip install --force-reinstall \
-        -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
-    python -m pip install --force-reinstall \
-        -r{toxinidir}/tests_and_analysis/tox_requirements.txt
-    # Force rebuild of euphonic extension to avoid Numpy clash
-    rm -rf {toxinidir}/build
-    python -m pip install '{toxinidir}[matplotlib,phonopy-reader,brille]'
-commands = {[testenv]test_command}
-
-[testenv:py310-minrequirements-mac]
-skip_install = True
-allowlist_externals = rm
-install_command =
-    python -m pip install --force-reinstall {opts} {packages}
-platform = darwin
-deps =
-    numpy==1.24.0
-    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
-commands_pre =
-    python -m pip install --force-reinstall \
-        -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements_mac.txt
-    python -m pip install --force-reinstall \
-        -r{toxinidir}/tests_and_analysis/tox_requirements.txt
-    # Force rebuild of euphonic extension to avoid Numpy clash
-    rm -rf {toxinidir}/build
-    python -m pip install '{toxinidir}[matplotlib,phonopy-reader,brille]'
-commands = {[testenv]test_command}
+    numpy==1.24
+    setuptools==60.*
+extras =
+    {[testenv]extras}
+    matplotlib
+    phonopy-reader
+    brille
+commands = {[testenv]test_command} -m "multiple_extras"
