Update codecov configuration
We are hitting some rate-limiting, v4 with token should help with
that. It is also supposed to allow fork PRs to push coverage without a
token, although that is subject to rate-limiting.

The rate limit seems to be across all github projects using codecov,
which is why it fires off pretty frequently.

--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -100,7 +100,9 @@ jobs:
           project-token: ${{ secrets.codacy_project_token }}
           coverage-reports: tests_and_analysis/test/reports/coverage*.xml
 
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
         if: inputs.coverage
         with:
           files: tests_and_analysis/test/reports/coverage*.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
