--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -84,7 +84,7 @@ jobs:
 
       - name: Run tests
         shell: bash -l {0}
-        run: python -m tox run-parallel
+        run: python -m tox run-parallel -- ${{ inputs.coverage && '--cov' || '' }}
 
       - name: Upload test results
         if: always()
@@ -100,7 +100,9 @@ jobs:
           project-token: ${{ secrets.codacy_project_token }}
           coverage-reports: tests_and_analysis/test/reports/coverage*.xml
 
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
         if: inputs.coverage
         with:
           files: tests_and_analysis/test/reports/coverage*.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
