--- a/.github/workflows/set_version.yml
+++ b/.github/workflows/set_version.yml
@@ -39,6 +39,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/setup-python@v5
+        with:
+            python-version: '3.10'
+
+      - name: Install dependencies
+        run: python -m pip install toolz packaging
+
       - name: Validate and normalise version number
         shell: python
         run : |
