Developing release action: split up build actions, no release yet
Change of plan: we _do_ need to push the version/tag commit in order
to have a sensible multi-job workflow. We do want that multi-job
workflow because versioning tweaks should happen on one OS but
building/testing needs to be matrixed.

But this should generally be done on a release branch, so if the
release fails it will be possible to clean up these commits/tags
without messing up the master branch history.

It seems a good idea to provide standalone build/test actions for
debugging. By separating the sdist and wheel builds they can be called
in parallel as part of overall release workflow.

A couple of details still to work out at this point:

- The OS matrix should be moved up to release.yml and passed as an
  option to build_wheels, so it is possible to troubleshoot one OS at a
  time.

- We may need to store the normalised release tag to environmnent and use
  in subsequent steps instead of inputs.ref. That way, small formatting
  changes like adding "v" will be carried forward correctly.

  https://docs.github.com/en/actions/sharing-automations/reusing-workflows#using-outputs-from-a-reusable-workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,4 +12,79 @@ on:
         required: true
         type: string
       push:
-        description: "Push commit, tag and release"
+        description: "Make release and push to PyPI"
+        required: true
+        type: boolean
+        default: false
+
+jobs:
+  prepare:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Bump version number, push changes and tag
+        uses: ./.github/workflows/set_version.yml
+        with:
+          ref: ${{ inputs.ref }}
+          version: ${{ inputs.version }}
+          push: true
+
+  build-wheels:
+    needs: prepare
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Build and test wheels
+        uses: ./.github/workflows/build_wheels.yml
+        with:
+          ref: ${{ inputs.ref }}
+
+  build-sdist:
+    needs: prepare
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Build and test sdist
+        uses: ./.github/workflows/build_sdist.yml
+        with:
+          ref: ${{ inputs.ref }}
+
+  release:
+    if: ${{ inputs.push }}
+    needs: [build-wheels,build-sdist]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Do nothing
+        shell: python
+        run : |
+          raise NotImplemented()
+
+  publish:
+    if: ${{ inputs.push }}
+    needs: release
+    name: Upload release to PyPI
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/euphonic
+    permissions:
+      id-token: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.ref }}
+          fetch-depth: 0  # This is possibly unnecessary?
+
+      - name: Download artifacts to Ubuntu environment
+        uses: actions/download-artifact@v4
+        with:
+          path: dist/
+          merge-multiple: true
+
+      - name: List Files
+        run: ls -R dist/
+
+      # - name: Upload wheels to PyPI
+      #   uses: pypa/gh-action-pypi-publish@release/v1
