--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,16 @@ jobs:
           ref: ${{ inputs.ref }}
           fetch-depth: 1
 
-      - name:
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Basic installation to check euphonic.__version__
+        shell: bash -l {0}
+        run: |
+          python -m pip install .
+
+      - name: Check version consistency, generate Github release page
         run : |
           python build_utils/release.py --github ${{ inputs.push && '--notest' || '' }}
 
