--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,6 +60,7 @@ jobs:
       - name: Basic installation to check euphonic.__version__
         shell: bash -l {0}
         run: |
+          python -m pip install requests pyyaml
           python -m pip install .
 
       - name: Check version consistency, generate Github release page
