--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,24 +26,25 @@ jobs:
       version: ${{ inputs.version }}
       push: true
 
-  build-sdist:
-    needs: prepare
-    name: Build and test sdist
-    uses: ./.github/workflows/build_sdist.yml
-    with:
-      ref: ${{ inputs.ref }}
+  # build-sdist:
+  #   needs: prepare
+  #   name: Build and test sdist
+  #   uses: ./.github/workflows/build_sdist.yml
+  #   with:
+  #     ref: ${{ inputs.ref }}
 
-  build-wheels:
-    name: Build and test wheels
-    needs: prepare
+  # build-wheels:
+  #   name: Build and test wheels
+  #   needs: prepare
 
-    uses: ./.github/workflows/build_wheels.yml
-    with:
-      ref: ${{ inputs.ref }}
+  #   uses: ./.github/workflows/build_wheels.yml
+  #   with:
+  #     ref: ${{ inputs.ref }}
 
   release:
     name: Github release
-    needs: [build-wheels,build-sdist]
+    # needs: [build-wheels,build-sdist]
+    needs: prepare
     runs-on: ubuntu-latest
 
     steps:
@@ -51,7 +52,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ inputs.ref }}
-          fetch-depth: 1
+          # fetch-depth: 1
+
+      - name: Git log, preview CHANGELOG
+        shell: bash -l {0}
+        run: |
+          git log | head -n 50
+          head CHANGELOG.rst
 
       - uses: actions/setup-python@v5
         with:
