Correct version number format to CHANGELOG bumper
Release script correctly picked up that the version number was written
to changelog without the leading "v": this is inconsistent!

--- a/.github/workflows/set_version.yml
+++ b/.github/workflows/set_version.yml
@@ -84,7 +84,7 @@ jobs:
 
       - name: "Update CHANGELOG.rst"
         shell: bash -l {0}
-        run: python build_utils/bump_changelog.py --replace CHANGELOG.rst ${VERSION_NUMBER}
+        run: python build_utils/bump_changelog.py --replace CHANGELOG.rst ${VERSION_STRING}
 
       - name: "Create commit"
         run: |
