--- a/.github/workflows/set_version.yml
+++ b/.github/workflows/set_version.yml
@@ -33,10 +33,16 @@ on:
         type: boolean
         default: false
         required: false
+    outputs:
+      tag:
+        description: "Normalised version tag"
+        value: ${{ jobs.set_version.outputs.tag }}
 
 jobs:
-  set-version:
+  set_version:
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.normalise.outputs.VERSION_STRING }}
 
     steps:
       - uses: actions/setup-python@v5
@@ -47,6 +53,7 @@ jobs:
         run: python -m pip install toolz packaging
 
       - name: Validate and normalise version number
+        id: normalise
         shell: python
         run : |
           import os
@@ -57,9 +64,10 @@ jobs:
 
           print(f"Normalised version string: {version_string}")
 
-          with open(os.environ["GITHUB_ENV"], "a") as github_env:
-              print(f"VERSION_NUMBER={version_number}", file=github_env)
-              print(f"VERSION_STRING={version_string}", file=github_env)
+          for github_target in "GITHUB_ENV", "GITHUB_OUTPUT":
+              with open(os.environ[github_target], "a") as target:
+                  print(f"VERSION_NUMBER={version_number}", file=target)
+                  print(f"VERSION_STRING={version_string}", file=target)
 
       # From a workflow call we might already have working copy; in that
       # case inputs.ref should be an empty string. Otherwise, checkout.
