--- a/.github/workflows/create-landing-page.yml
+++ b/.github/workflows/create-landing-page.yml
@@ -33,7 +33,7 @@ jobs:
         if: github.event_name == 'push'
         run: echo "PAGE_TYPE=latest" >> $GITHUB_ENV
       - name: Set env var based on workflow call
-        if: github.event_name == 'workflow_call'
+        if: (github.event_name == 'workflow_call') || (github.event_name == 'workflow_dispatch')
         run: echo "PAGE_TYPE=${{ inputs.ref }}" >> $GITHUB_ENV
       - name: Create landing page
         run: python write_doi_landing_page.py ${{ env.PAGE_TYPE }}
