One-step release action (#368)
Major rework of build/release action framework.

Previous approach involved pushing tags and running release.py locally. There were a lot of steps, requiring dev documentation to be checked every time.

In this setup, the release.yml github action should be manually dispatched, with a release branch and new version number provided. Then:
- The version number format is standardised
- a version-bump commit is pushed
- wheels and sdist are built and tested from this commit
- The Github release page is created
- Wheels/sdist are pushed to PyPI
- Release is added to citation website

If a step fails, the workflow halts. Error recovery should be pretty simple: update the release branch, remove the git tag and github releases if they were created, and run again.

---------

Co-authored-by: Jacob Wilkins <46597752+oerc0122@users.noreply.github.com>

--- a/.github/workflows/set_version.yml
+++ b/.github/workflows/set_version.yml
@@ -11,13 +11,49 @@ on:
         description: "New version number"
         required: true
         type: string
+      push:
+        description: "Push commit to branch"
+        required: true
+        type: boolean
+        default: false
+
+  workflow_call:
+    inputs:
+      ref:
+        description: "Target branch"
+        required: false
+        type: string
+        default: ""
+      version:
+        description: "New version number"
+        required: true
+        type: string
+      push:
+        description: "Push commit to branch"
+        type: boolean
+        default: false
+        required: false
+    outputs:
+      tag:
+        description: "Normalised version tag"
+        value: ${{ jobs.set_version.outputs.tag }}
 
 jobs:
-  set-version:
+  set_version:
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.normalise.outputs.VERSION_STRING }}
 
     steps:
+      - uses: actions/setup-python@v5
+        with:
+            python-version: '3.10'
+
+      - name: Install dependencies
+        run: python -m pip install toolz packaging
+
       - name: Validate and normalise version number
+        id: normalise
         shell: python
         run : |
           import os
@@ -28,11 +64,15 @@ jobs:
 
           print(f"Normalised version string: {version_string}")
 
-          with open(os.environ["GITHUB_ENV"], "a") as github_env:
-              print(f"VERSION_NUMBER={version_number}", file=github_env)
-              print(f"VERSION_STRING={version_string}", file=github_env)
+          for github_target in "GITHUB_ENV", "GITHUB_OUTPUT":
+              with open(os.environ[github_target], "a") as target:
+                  print(f"VERSION_NUMBER={version_number}", file=target)
+                  print(f"VERSION_STRING={version_string}", file=target)
 
+      # From a workflow call we might already have working copy; in that
+      # case inputs.ref should be an empty string. Otherwise, checkout.
       - uses: actions/checkout@v4
+        if: ${{ inputs.ref }}
         with:
           ref: ${{ inputs.ref }}
           fetch-tags: true
@@ -50,11 +90,15 @@ jobs:
           sed -i "s/^version:\ .*/version: ${VERSION_NUMBER}/" CITATION.cff
           sed -i "s/^date-released:\ .*/date-released: $(date -I)/" CITATION.cff
 
+      - name: "Update CHANGELOG.rst"
+        shell: bash -l {0}
+        run: python build_utils/bump_changelog.py --replace CHANGELOG.rst ${VERSION_STRING}
+
       - name: "Create commit"
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add euphonic/version.py CITATION.cff
+          git add euphonic/version.py CITATION.cff CHANGELOG.rst
 
           if git diff --cached --quiet
           then
@@ -79,6 +123,7 @@ jobs:
           git diff HEAD^
 
       - name: "Push commit to branch"
+        if: ${{ inputs.push }}
         shell: bash -l {0}
         run: |
           # Verify that ref is a branch (as opposed to a tag or hash)
