--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -52,6 +52,10 @@ jobs:
       coverage: ${{ matrix.config.coverage }}
     secrets: inherit
 
+  test-gcc14:
+    needs: lint
+    uses: ./.github/workflows/test_gcc14.yml
+
   test-docs:
     needs: lint
     runs-on: ubuntu-latest
