--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -10,7 +10,14 @@ on:
   workflow_dispatch:
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: astral-sh/ruff-action@v3
+
   test:
+    needs: lint
     if: |
        github.event_name != 'pull_request' ||
        (github.event.action == 'labeled' && github.event.label.name == 'run_ci') ||
@@ -45,7 +52,12 @@ jobs:
       coverage: ${{ matrix.config.coverage }}
     secrets: inherit
 
+  test-gcc14:
+    needs: lint
+    uses: ./.github/workflows/test_gcc14.yml
+
   test-docs:
+    needs: lint
     runs-on: ubuntu-latest
     if: success() || failure()
     steps:
