--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,4 +80,5 @@ select = [
        "W293", # blank-line-with-whitespace
        "B006", # mutable-argument-default
        "PLR0203", # no-staticmethod-decorator
+       "PLR5501", # collapsible-else-if
 ]
