Pin ruff in CI to working version
0.11.1 gives bizarre errors like

Error: euphonic/spectra/collections.py:416:41: SyntaxError: Cannot use star annotation on Python 3.10 (syntax was added in Python 3.11)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,8 +76,8 @@ target-version = "py310"
 preview = true
 explicit-preview-rules = true
 select = [
-       # "RET505", # superfluous-else-return
-       # "RET506", # superfluous-else-raise
+       "RET505", # superfluous-else-return
+       "RET506", # superfluous-else-raise
        "W291", # trailing-whitespace
        "W293", # blank-line-with-whitespace
        "B006", # mutable-argument-default
