--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,7 @@ explicit-preview-rules = true
 select = [
        "I",       # isort
        "F401",    # unused-import
-       # "F821",    # undefined-name
+       # "F821",    # undefined-name   # This is useful for missing imports, but currently catches a few other things
        "W291",    # trailing-whitespace
        "W293",    # blank-line-with-whitespace
        "B006",    # mutable-argument-default
