--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,11 +76,19 @@ target-version = "py310"
 preview = true
 explicit-preview-rules = true
 select = [
-       "RET505", # superfluous-else-return
-       "RET506", # superfluous-else-raise
-       "W291", # trailing-whitespace
-       "W293", # blank-line-with-whitespace
-       "B006", # mutable-argument-default
+       "I",       # isort
+       "F401",    # unused-import
+       # "F821",    # undefined-name   # This is useful for missing imports, but currently catches a few other things
+       "W291",    # trailing-whitespace
+       "W293",    # blank-line-with-whitespace
+       "B006",    # mutable-argument-default
        "PLR0203", # no-staticmethod-decorator
        "PLR5501", # collapsible-else-if
+       "RET505",  # superfluous-else-return
+       "RET506",  # superfluous-else-raise
 ]
+
+[tool.ruff.lint.isort]
+force-sort-within-sections = true
+
+
