--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,10 @@ explicit-preview-rules = true
 select = [
        "I",       # isort
        "ERA001",  # Eradicate commented-out code
+       "YTT",     # Flake8-2020
+       # "ANN",   # Full type annotation, not realistic right now
+       "ASYNC",
+       "S",       # Security (flake8-bandit)
        "F401",    # unused-import
        # "F821",    # undefined-name   # This is useful for missing imports, but currently catches a few other things
        "W291",    # trailing-whitespace
@@ -88,6 +92,9 @@ select = [
        "RET505",  # superfluous-else-return
        "RET506",  # superfluous-else-raise
 ]
+ignore = [
+       "S101",  # Use of except
+       ]
 task-tags = ["Note"]  # Avoid false positives for ERA001 on lines like "# Note: CODE-LIKE-THINGS"
 
 [tool.ruff.lint.isort]
