--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ select = [
        # "ANN",   # Full type annotation, not realistic right now
        "ASYNC",
        "S",       # Security (flake8-bandit)
+       "BLE",     # flake8-blind-except
        "F401",    # unused-import
        # "F821",    # undefined-name   # This is useful for missing imports, but currently catches a few other things
        "W291",    # trailing-whitespace
