--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,9 @@ select = [
        "ASYNC",
        "S",       # Security (flake8-bandit)
        "BLE",     # flake8-blind-except
+       # "FBT",   # flake8-boolean-trap: don't use positional boolean arguments. Fixable, but API-breaking.
+       # "B",     # flake8-bugbear: Fixable but a bit involved
+       "A",       # flake8-builtins
        "F401",    # unused-import
        # "F821",    # undefined-name   # This is useful for missing imports, but currently catches a few other things
        "W291",    # trailing-whitespace
