--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,21 @@ select = [
        "T10",     # flake8-debugger
        # "EM",      # flake8-errmsg: Big diff, worth its own PR
        "EXE",     # flake8-executable
+       "FIX",     # leftover FIXME, TODO etc. (flake8-fixme)
+       "FA",      # flake8-future-annotations
+       "INT",     # flake8-gettext
+       "ISC",     # flake8-implicit-str-concat
+       "ICN",     # flake8-import-conventions
+       "LOG",     # flake8-logging
+       "G",       # flake8-logging-format
+       "INP",     # flake8-no-pep420
+       "PIE",     # flake8-pie
+       "PYI",     # flake8-pyi
+       "PT",      # flake8-pytest-style
+       # "Q",       # flake8-quotes : 50-60 fixes if we prefer single. Fine, but do it in a new PR.
+       "RSE",     # flake8-raise
+       "RET",     # flake8-return
+       "SLF",     # flake8-self
        "F401",    # unused-import
        # "F821",    # undefined-name   # This is useful for missing imports, but currently catches a few other things
        "W291",    # trailing-whitespace
@@ -104,10 +119,12 @@ select = [
 ignore = [
        "S101",    # Use of except
        "CPY001",  # Missing copyright notice at top of every file. Not for us.
+       "T20",     # flake8-print forbids use of print and pprint.
        ]
 task-tags = ["Note"]  # Avoid false positives for ERA001 on lines like "# Note: CODE-LIKE-THINGS"
 
 [tool.ruff.lint.isort]
 force-sort-within-sections = true
 
-
+[tool.ruff.lint.flake8-quotes]
+inline-quotes = "single"
